# procedural-modeling

./: .gitignore  CMakeLists.txt  CameraTrackball.cpp  Edge.cpp  Edge.h  EdgeLabel.cpp  EdgeLabel.h  Face.cpp  Face.h  Graph.cpp  Graph.h  GraphBoundary.cpp  GraphBoundary.h  GraphIsomorphism.cpp  GraphIsomorphism.h  GraphTransform.cpp  GraphTransform.h  Input.cpp  Input.h  InputEdge.cpp  InputGraph.cpp  InputGraph.h  InputVertex.cpp  InputVertex.h  LinearEquationSolver.cpp  LinearEquationSolver.h  Point.cpp  Point.h  Primitive.cpp  Primitive.h  README.md  Rule.cpp  Rule.h  Util.cpp  Util.h  Vertex.cpp  Vertex.h  face.cpp  face.h  graph.cpp  (+6 more)
cpp/: CMakeLists.txt  CameraTrackball.cpp  CameraTrackball.h  Graph.cpp  Graph.h  GraphIsomorphism.cpp  Input.h  InputEdge.cpp  InputEdge.h  InputVertex.cpp  InputVertex.h  LinearEquationSolver.cpp  Point.cpp  README.md  Rule.cpp  Rule.h
python/: camera.py  edge.py  graph.py  graph2.py  graph_drawing.py  graph_hierarchy.py  graph_transform.py  input.py  isomorphism.py  main.py  point.py  rejection_sampling.py  rule.py  util.py  vertex.py
python/test/: graph.py  graph_drawing.py  graph_drawing_test.py  graph_test.py  graph_transform_test.py  isomorphism.py  isomorphism_test.py  rejection_sampling_test.py  rules_test.py  square_rules.py  test.py
